# fix-affix

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.githooks/: pre-commit  pre-push
doc/: spec.toml
examples/: ex_dict.toml  test.txt
scripts/: install-hooks.sh
src/: context.rs  lib.rs  main.rs  process.rs  read.rs  types.rs  write.rs
