[package]
name = "fix-affix"
version = "0.2.0"
edition = "2024"
authors = ["Sam Reynolds"]
description = "Build a Hunspell dictionary via TOML"
repository = "https://github.com/samreynoldsmath/fix-affix"
license = "MIT"
keywords = [
    "hunspell",
    "toml",
    "dic",
    "aff",
    "spell",
]
categories = ["command-line-utilities"]
exclude = ["scripts/", ".git*", "examples/"]

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
clap = {version = "4.6.3", features = ["derive", "env", "cargo"]}
serde = {version = "1.0.228", features = ["derive"]}
toml = "1.1.2"
